# fearless_os

./: .gitignore  flake.nix  rust-toolchain.toml
bios_bootloader/: Cargo.toml  Makefile  README.md  boot.S  linker.ld  stage_0.nasm  stage_1.nasm  stage_2.nasm
bios_bootloader/rust/: Cargo.toml  build.rs  linker.ld
bios_bootloader/rust/.cargo/: config.toml
bios_bootloader/rust/.zed/: settings.json
bios_bootloader/rust/src/: main.rs
bios_bootloader/scripts/src/: lib.rs
bios_bootloader/src/: main.rs
kernel/: Cargo.toml  arm.ld  bios_fat32_0.S  bios_fat32_1.S  boot.S  justfile  limine_x86_64.ld  riscv64.ld  stage0.S  stage1.S  test.S
kernel/.cargo/: config.toml
kernel/.zed/: settings.json
kernel/bios/: boot.S
kernel/src/: bcm2835_aux.rs  bcm2835_aux_uart.rs  bcm2836_l1_intc.rs  main.rs
kernel/src/aarch64/: bcm2836_armctrl_ic.rs  entry.rs  interrupts.rs  logger.rs  mod.rs  panic_handler.rs
kernel/src/arm/: logger.rs  mod.rs  panic_handler.rs
kernel/src/limine_x86_64/: mod.rs
kernel/src/riscv64/: console.rs  logger.rs  mod.rs  paging.rs  panic_handler.rs  start.rs  trap.rs
kernel/src/uefi/: mod.rs
kernel_aarch64/: Cargo.toml  bcm2710-rpi-3-b.dts  justfile  linker.ld
kernel_aarch64/.cargo/: config.toml
kernel_aarch64/src/: bcm2835_aux_uart.rs  logger.rs  main.rs  panic_handler.rs
kernel_riscv64/: Cargo.toml  justfile  linker.ld
kernel_riscv64/.zed/: settings.json
kernel_riscv64/src/: logger.rs  main.rs  panic_handler.rs  start.rs
kernel_uefi/: Cargo.toml  justfile
kernel_uefi/.cargo/: config.toml
kernel_uefi/src/: main.rs
kernel_x86_64/: Cargo.toml  build.rs  justfile  limine.conf
kernel_x86_64/src/: main.rs
mbr_bootloader/: Cargo.toml  Makefile  bootloader.S  test.S
mbr_bootloader/bootloader/: stage_1.S
mbr_bootloader/src/: lib.rs  main.rs
mbr_bootloader/tests/: tests.rs
