[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[target.'cfg(all(target_arch = "x86_64", target_os = "none"))'.dependencies]
limine = "0.6.5"
uart_16550 = "0.6.0"
x86_64 = "0.15.4"

[target.'cfg(all(target_arch = "x86_64", target_os = "uefi"))'.dependencies]
hex-slice = "0.1.4"
log = "0.4.32"
sha2 = { version = "0.11.0", default-features = false }
uefi = { version = "0.37.0", features = ["logger", "panic_handler"] }

[[bin]]
name = "kernel"
test = false
bench = false
