[package]
name = "kernel_aarch64"
version = "0.1.0"
edition = "2024"

[dependencies]
aarch64-cpu = "11.2.0"
bitbybit = "2.0.0"
log = "0.4.32"
spin = { version = "0.12.0", default-features = false, features = ["once", "spin_mutex"] }
volatile = { version = "0.6.1", features = ["derive"] }

[[bin]]
name = "kernel_aarch64"
test = false
bench = false
